# ukpostcodes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
scripts/: process_onspd.ipynb
src/uk_postcodes_parsing/: fix.py  postcode_utils.py  ukpostcode.py
src/ukpostcodes/: fix.py  postcode_utils.py  ukpostcode.py
tests/: test_all.py  tests.py
tests/data/: postcode_parse_test.csv
