[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ukpostcodes"
version = "0.0.1"
authors = [
  { name="Anirudh Gangwal", email="angangwa@amazon.com" },
]
description = "A Python package to parge UK postcodes from text. Useful in applications such as OCR and IDP."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/anirudhgangwal/ukpostcodes"
"Bug Tracker" = "https://github.com/anirudhgangwal/ukpostcodes/issues"
