[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uk_postcodes_parsing"
version = "1.1.2"
authors = [
  { name="Anirudh Gangwal", email="angangwa@amazon.com" },
]
description = "A Python package to parse UK postcodes from text. Useful in applications such as OCR and IDP."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "bandit[toml]"]
lint = [ "black"]

[project.urls]
"Homepage" = "https://github.com/anirudhgangwal/ukpostcodes"
"Bug Tracker" = "https://github.com/anirudhgangwal/ukpostcodes/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests/",
]

[tool.bandit]
skips = ["B101"]